--- a/src/app.yaml
+++ b/src/app.yaml
@@ -1,4 +1,4 @@
-application: lxbus
+application: lxbusinfo
 version: 1
 runtime: python
 api_version: 1
@@ -7,7 +7,7 @@ inbound_services:
 - mail
 
 handlers:
-- url: /_ah/mail/carris@lxbus\.appspotmail\.com 
+- url: /_ah/mail/carris@lxbusinfo\.appspotmail\.com 
   script: main.py 
   login: admin
 - url: /.*
