--- a/src/app.yaml
+++ b/src/app.yaml
@@ -7,8 +7,15 @@ inbound_services:
 - mail
 
 handlers:
+- url: /
+  static_files: home.html
+  upload: home.html
+- url: /img
+  static_dir: img 
 - url: /_ah/mail/carris@lxbusinfo\.appspotmail\.com 
   script: main.py 
   login: admin
 - url: /.*
   script: main.py
+
+  
