After REQUEST_TIMEOUT consider the request timeout on the API side

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -20,3 +20,9 @@ indexes:
   properties:
   - name: stopcode
   - name: last_modified
+
+- kind: BusRequest
+  properties:
+  - name: status_code
+  - name: stopcode
+  - name: last_modified
