All requests will be updated, not only the ones without response

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -26,3 +26,8 @@ indexes:
   - name: status_code
   - name: stopcode
   - name: last_modified
+
+- kind: BusRequest
+  properties:
+  - name: stopcode
+  - name: last_modified
